Added createUser endpoint and updated endpoint names
